--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,6 +1,6 @@
 <section class="container">
   <div>
-    <h3>Productos:</h3>
+    <h3>Productos</h3>
     {{#each products}}
     <hr>
     <div class="card" style="width: 18rem;">
